--- a/news-site/index.html
+++ b/news-site/index.html
@@ -28,6 +28,18 @@
     </header>
     <main>
         <section class="news-inbox">
+            <a href="grift.html" class="news-item-link">
+                <div class="news-item">
+                    <div class="news-image">
+                        <img src="cd5.jpg" alt="Abstract art - Grift">
+                    </div>
+                    <div class="news-content">
+                        <h3>You Can Just... Grift?</h3>
+                        <p class="news-preview">Distinguishing between genuine builders and opportunistic grifters in the tech ecosystem.</p>
+                        <span class="details">March 03, 2025</span>
+                    </div>
+                </div>
+            </a>
             <a href="the-mission.html" class="news-item-link">
                 <div class="news-item">
                     <div class="news-image">
